[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# TODO: Replace {service} with your service name (e.g., "mcp-ecpay")
name = "mcp-heimdall"
version = "0.1.0"
description = "MCP Server for Asgard Auto Post API — AI-callable tools via Model Context Protocol"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Asgard AI Platform", email = "dev@asgard.ai"},
]

# Base dependencies (always required)
dependencies = [
    "requests>=2.31.0",
    "mcp>=1.0.0",
]

# ---------------------------------------------------------------------------
# Connector-specific dependencies — uncomment what you need:
# ---------------------------------------------------------------------------
# RSS connector:
#   "feedparser>=6.0.0",
#
# Scraper connector:
#   "beautifulsoup4>=4.12.0",
#
# MQTT connector:
#   "paho-mqtt>=2.0.0",
# ---------------------------------------------------------------------------

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
mcp-heimdall = "mcp_heimdall.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_heimdall"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
