[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-heimdall"
version = "0.1.0"
description = "MCP Server for Asgard Auto Post API — AI-callable tools via Model Context Protocol"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Asgard AI Platform", email = "dev@asgard.ai"},
]
keywords = [
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "ai-tools",
    "auto-post-api",
    "asgard",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.31.0",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/asgard-ai-platform/mcp-heimdall"
Repository = "https://github.com/asgard-ai-platform/mcp-heimdall"
Issues = "https://github.com/asgard-ai-platform/mcp-heimdall/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
mcp-heimdall = "mcp_heimdall.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_heimdall"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
