[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-heimdall"
version = "0.1.1"
description = "MCP server exposing 26 AI Agent-callable read-only tools for Asgard content management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Asgard AI Platform"},
]
keywords = [
    "mcp",
    "heimdall",
    "asgard",
    "content-management",
    "ai-agent",
    "claude",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "requests>=2.31.0",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/asgard-ai-platform/mcp-heimdall"
Repository = "https://github.com/asgard-ai-platform/mcp-heimdall"
Issues = "https://github.com/asgard-ai-platform/mcp-heimdall/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
mcp-heimdall = "mcp_heimdall.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_heimdall"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
